footer, list and filter added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,9 @@
 @tailwind utilities;
 
 
+.scrollbar-hide::-webkit-scrollbar{
+    display: none;
+}
+.scrollbar-hide{
+    scrollbar-width: none;
+}
